[package]
name = "xga-sdk-v0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.12"
tokio = { version = "1", features = ["full"] }

alloy = { version = "0.2.1", features = ["full"] }
# For making HTTP requests to Ethereum nodes
reqwest = { version = "0.11", features = ["json"] }

# For JSON serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# For environment variable management
dotenv = "0.15"

# For logging
log = "0.4"
simplelog = "0.12"
